works for manual copy of defaults