@@ -1,6 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>fertilizer</groupId>
 	<artifactId>fertilizerapp</artifactId>
@@ -17,15 +17,14 @@
 
 		<javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
 		<gluonfx.maven.plugin.version>1.0.23</gluonfx.maven.plugin.version>
-		<main.class>stamfordcoop/fertilizer.MainApp</main.class>
-		<app.main.class>fertilizer.MainApp</app.main.class>
+		<main.class>fertilizer.Launcher</main.class>
+		
 		<app.identifier>fertilizerapp</app.identifier>
 		<app.description>App to optimize component selection for customizing field fertilizer mixes.</app.description>
 		<package.type />
 		<module.name>stamfordcoop</module.name>
 		<vendor>Stamford Farmers Cooperative</vendor>
 	</properties>
-
 	<dependencies>
 		<dependency>
 			<groupId>org.openjfx</groupId>
@@ -97,24 +96,6 @@
 
 	</dependencies>
 
-	<repositories>
-		<repository>
-			<id>Gluon</id>
-			<url>https://nexus.gluonhq.com/nexus/content/repositories/releases</url>
-		</repository>
-		<repository>
-			<id>snapshot</id>
-			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-		</repository>
-	</repositories>
-
-	<pluginRepositories>
-		<pluginRepository>
-			<id>snapshot</id>
-			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-		</pluginRepository>
-	</pluginRepositories>
-
 	<build>
 		<plugins>
 			<plugin>
@@ -122,182 +103,42 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<configuration>
+					<release>${maven.compiler.release}</release>
 				</configuration>
 			</plugin>
-
 			<plugin>
 				<groupId>org.openjfx</groupId>
 				<artifactId>javafx-maven-plugin</artifactId>
-				<version>${javafx.maven.plugin.version}</version>
+				<version>0.0.3</version>
 				<configuration>
 					<mainClass>${main.class}</mainClass>
 				</configuration>
 			</plugin>
-
-			<plugin>
-				<groupId>com.gluonhq</groupId>
-				<artifactId>gluonfx-maven-plugin</artifactId>
-				<version>${gluonfx.maven.plugin.version}</version>
-				<configuration>
-					<verbose>false</verbose>
-					<target>${gluonfx.target}</target>
-
-					<attachList>
-					</attachList>
-					<nativeImageArgs></nativeImageArgs>
-					<runtimeArgs>-Dglass.accessible.force=false</runtimeArgs>
-					<mainClass>${main.class}</mainClass>
-
-					<appIdentifier>${app.identifier}</appIdentifier>
-					<releaseConfiguration>
-						<description>${app.description}</description>
-						<vendor>Stamford Farmers Cooperative</vendor>
-						<version>${version}</version>
-					</releaseConfiguration>
-
-				</configuration>
-			</plugin>
-			<plugin>
-				<artifactId>maven-resources-plugin</artifactId>
-				<version>3.3.1</version>
-				<executions>
-					<execution>
-						<id>copy-resources</id>
-						<!-- here the phase you need -->
-						<phase>compile</phase>
-						<goals>
-							<goal>copy-resources</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>target/gluonfx/x86_64-windows</outputDirectory>
-							<resources>
-								<resource>
-									<directory>${basedir}</directory>
-									<filtering>true</filtering>
-									<includes>
-										<include>*.csv</include>
-									</includes>
-								</resource>
-							</resources>
-						</configuration>
-					</execution>
-					<execution>
-						<id>copy-resources1</id>
-						<!-- here the phase you need -->
-						<phase>compile</phase>
-						<goals>
-							<goal>copy-resources</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>target/defaults</outputDirectory>
-							<resources>
-								<resource>
-									<directory>${basedir}</directory>
-									<filtering>true</filtering>
-									<includes>
-										<include>default*.csv</include>
-									</includes>
-								</resource>
-							</resources>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.2.5</version>
-				<configuration>
-					<forkCount>1</forkCount>
-					<reuseForks>false</reuseForks>
-					<includes>
-						<include>*Test*.java</include>
-					</includes>
-					<argLine>@{argLine} --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED --add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argLine>
-				</configuration>
-			</plugin>
-
-			<plugin>
-				<groupId>org.jacoco</groupId>
-				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.8.12</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>prepare-agent</goal>
-						</goals>
-					</execution>
-					<!-- attached to Maven test phase -->
-					<execution>
-						<id>report</id>
-						<phase>test</phase>
-						<goals>
-							<goal>report</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>3.4.1</version>
-				<configuration>
-					<outputDirectory>target/jars</outputDirectory>
-					<excludes>**/maven/*</excludes>
-					<excludes>**/native-image/*</excludes>
-				</configuration>
-			</plugin>
-
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>copy-dependencies</id>
-						<phase>package</phase>
-						<goals>
-							<goal>copy-dependencies</goal>
-						</goals>
-						<configuration>
-							<includeScope>runtime</includeScope>
-							<outputDirectory>target/jmods</outputDirectory>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-
-			
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
-				<version>3.6.0</version>
+				<version>3.2.0</version>
 				<executions>
 					<execution>
+						<phase>package</phase>
 						<goals>
 							<goal>shade</goal>
 						</goals>
 						<configuration>
-						<outputFile>target/uber/${app.identifier}-${project.version}.jar</outputFile>
-						<minimizeJar>true</minimizeJar>
+							<shadedArtifactAttached>true</shadedArtifactAttached>
+							<shadedClassifierName>project-classifier</shadedClassifierName>
+							<outputFile>target\shade\${project.artifactId}.jar</outputFile>
 							<transformers>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<manifestEntries>
-										<Main-Class>fertilizer.Launcher</Main-Class>
-										<X-Compile-Source-JDK>
-											${maven.compile.source}</X-Compile-Source-JDK>
-										<X-Compile-Target-JDK>
-											${maven.compile.target}</X-Compile-Target-JDK>
-									</manifestEntries>
+									<mainClass>${main.class}</mainClass>
 								</transformer>
 							</transformers>
 						</configuration>
 					</execution>
 				</executions>
 			</plugin>
-			
+
 			<plugin>
 				<!--has problem with automatic modules -->
 				<!-- run with command clean package jpackage:jpackage@win-->
@@ -306,17 +147,16 @@
 				<version>1.6.4</version>
 
 				<configuration>
-					<name>Fertilizer App M</name>
+					<name>HelloFX</name>
 					<appVersion>${version}</appVersion>
 					<vendor>${vendor}</vendor>
-					<input>.</input>
-					<mainClass>fertilizer.Launcher</mainClass>
-					<mainJar>target/uber/${app.identifier}-${project.version}.jar</mainJar>
+					<input>target\shade\</input>
+					<mainClass>${main.class}</mainClass>
+					<mainJar>${project.artifactId}.jar</mainJar>
 					<destination>target/dist</destination>
 					<appVersion>${version}</appVersion>
-					
-					<resourceDir>target\defaults</resourceDir>				
-					<javaOptions>					
+					<resourceDir>defaults</resourceDir>
+					<javaOptions>
 						<option>-Dfile.encoding=UTF-8</option>
 					</javaOptions>
 				</configuration>
@@ -331,19 +171,6 @@
 					</execution>
 				</executions>
 			</plugin>
-
 		</plugins>
 	</build>
-
-	<profiles>
-		<profile>
-			<id>desktop</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-			<properties>
-				<gluonfx.target>host</gluonfx.target>
-			</properties>
-		</profile>
-	</profiles>
 </project>
